[gd_scene load_steps=5 format=2]

[ext_resource path="res://CameraRig.gd" type="Script" id=1]
[ext_resource path="res://MovingClickableCube.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[node name="Spatial" type="Spatial"]

[node name="CameraRig" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.816092, 4.59575, 4.65297 )
script = ExtResource( 1 )
rotationAmount = 0.1

[node name="Camera" type="Camera" parent="CameraRig"]
transform = Transform( 1, 0, 0, 0, 0.799685, 0.60042, 0, -0.60042, 0.799685, 0, 0.396505, 0.284881 )

[node name="MovingClickableCube" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25.4762 )
mesh = SubResource( 1 )
skeleton = NodePath("../Cube1")
material/0 = null
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="MovingClickableCube"]
wait_time = 2.0
autostart = true

[node name="Area" type="Area" parent="MovingClickableCube"]

[node name="CollisionShape" type="CollisionShape" parent="MovingClickableCube/Area"]
shape = SubResource( 2 )

[node name="Cube1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.49821, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Cube2" type="MeshInstance" parent="Cube1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.27858, 0.00538874, -9.02253 )
mesh = SubResource( 1 )
skeleton = NodePath("../Cube3")
material/0 = null

[node name="Cube3" type="MeshInstance" parent="Cube1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.78037, 0.00538874, -5.53522 )
mesh = SubResource( 1 )
material/0 = null

[connection signal="timeout" from="MovingClickableCube/Timer" to="MovingClickableCube" method="_on_Timer_timeout"]
[connection signal="input_event" from="MovingClickableCube/Area" to="MovingClickableCube" method="_on_Area_input_event"]
